# fastapi-tutorial-jwt

./: README.md  docker-compose.yml  pyproject.toml
app/: auth.py  db.py  main.py  model.py
